--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -80,10 +80,10 @@
     </svg>
   </div>
 
-  <div style="background-color: #ce7227">
+  <div class="border-light" style="background-color: #ce7227">
     <div class="container" style="padding-top: 4em; padding-bottom: 4em;">
-      <img src="{% static 'img/talk.jpg' %}" class="rounded-circle" width="300" height="300" align="right">
-      <div style="margin-right: 400px;">
+      <img src="{% static 'img/talk.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
+      <div class="lorem-left">
         <h3 class="subtitle">A framework for speakers</h3>
         <div class="mainnav"></div>
         <p class="subtext">
@@ -97,10 +97,10 @@
     <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
   </svg>
 
-  <div style="background-color: #343a40">
+  <div  class="border-dark" style="background-color: #343a40">
     <div class="container subcontainer">
-      <img src="{% static 'img/public.jpg' %}" class="rounded-circle" width="300" height="300" align="left">
-      <div style="margin-left: 400px;">
+      <img src="{% static 'img/public.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="left">
+      <div class="lorem-right">
         <h3 class="subtitle">Tech talks in a nutshell</h3>
         <div class="mainnav"></div>
         <p class="subtext">
@@ -114,10 +114,10 @@
     <polygon points="100 0 100 100 0 100" style="fill: #ce7227" />
   </svg>
 
-  <div style="background-color: #ce7227">
+  <div class="border-light" style="background-color: #ce7227">
     <div class="container subcontainer">
-      <img src="{% static 'img/team.jpg' %}" class="rounded-circle" width="300" height="300" align="right">
-      <div style="margin-right: 400px;">
+      <img src="{% static 'img/team.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
+      <div class="lorem-left">
         <h3 class="subtitle">Have a blast</h3>
         <div class="mainnav"></div>
         <p class="subtext">
@@ -131,7 +131,7 @@
     <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
   </svg>
 
-  <div style="background-color: #343a40">
+  <div class="border-dark" style="background-color: #343a40">
     <div class="container subcontainer">
       <div class="container">
         <div class="copynope">
