--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -1,150 +1,93 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/homepage.css' %}" />
+{% endblock %}
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <title>GConfs</title>
-
-  <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}" />
-  
-  {% block javascript %}
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  
-  {% endblock %}
-</head>
-
-<body style="margin-bottom: 0px;">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="{% static 'img/gconfs_logo.png' %}" height="30" class="d-inline-block align-top" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Talks</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Stream</a>
-        </li>
-        {% if user.is_authenticated %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ user.username|title }}
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Profile</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-          </div>
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'social:begin' 'google-oauth2' %}">Login</a>
-        </li>
-        {% endif %}
-      </ul>
-    </div>
-  </div>
-  </nav>
-
-  <div class="intro-header">
-    <div class="container">
-      <div class="col-lg-12">
-        <div class="intro-message">
-          <h1 class="landing">LET'S TALK</h1>
-        </div>
-      </div>
-    </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-      <polygon points="100 0 100 100 0 100" style="fill: #ce7227" />
-    </svg>
-  </div>
-
-  <div class="border-light" style="background-color: #ce7227">
-    <div class="container" style="padding-top: 4em; padding-bottom: 4em;">
-      <img src="{% static 'img/talk.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
-      <div class="lorem-left">
-        <h3 class="subtitle">A framework for speakers</h3>
-        <div class="mainnav"></div>
-        <p class="subtext">
-          GConfs is a student association at EPITA organizing highly technical conferences in Paris. It's like a framework for speakers who want to give a talk about any kind of subject directly or indirectly related to computer science.
-        </p>
+{% block content %}
+<div class="intro-header">
+  <div class="container">
+    <div class="col-lg-12">
+      <div class="intro-message">
+        <h1 class="landing">LET'S TALK</h1>
       </div>
     </div>
   </div>
-
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #ce7227">
-    <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
-  </svg>
-
-  <div  class="border-dark" style="background-color: #343a40">
-    <div class="container subcontainer">
-      <img src="{% static 'img/public.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="left">
-      <div class="lorem-right">
-        <h3 class="subtitle">Tech talks in a nutshell</h3>
-        <div class="mainnav"></div>
-        <p class="subtext">
-          Everything is organized in such a way, that we take care of all relevant infrastructure, and leave the speaker with only the talk's content to take care of. We believe that the content is what truly matters, which is why many of our members are also speakers and frequently give their own talks.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #343a40">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
     <polygon points="100 0 100 100 0 100" style="fill: #ce7227" />
   </svg>
+</div>
 
-  <div class="border-light" style="background-color: #ce7227">
-    <div class="container subcontainer">
-      <img src="{% static 'img/team.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
-      <div class="lorem-left">
-        <h3 class="subtitle">Have a blast</h3>
-        <div class="mainnav"></div>
-        <p class="subtext">
-            With a decade of experience, GConfs has worked with the biggest names and shared events with <i>Facebook</i>, <i>Google</i> and <i>EuroBSDcon</i> to name a few. If you think you have something worth sharing, just get in touch with us at contact@gconfs.fr
-        </p>
+<div class="border-light" style="background-color: #ce7227">
+  <div class="container" style="padding-top: 4em; padding-bottom: 4em;">
+    <img src="{% static 'img/talk.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
+    <div class="lorem-left">
+      <h3 class="subtitle">A framework for speakers</h3>
+      <div class="mainnav"></div>
+      <p class="subtext">
+        GConfs is a student association at EPITA organizing highly technical conferences in Paris. It's like a
+        framework for speakers who want to give a talk about any kind of subject directly or indirectly related to
+        computer science.
+      </p>
+    </div>
+  </div>
+</div>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #ce7227">
+  <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
+</svg>
+
+<div class="border-dark" style="background-color: #343a40">
+  <div class="container subcontainer">
+    <img src="{% static 'img/public.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="left">
+    <div class="lorem-right">
+      <h3 class="subtitle">Tech talks in a nutshell</h3>
+      <div class="mainnav"></div>
+      <p class="subtext">
+        Everything is organized in such a way, that we take care of all relevant infrastructure, and leave the speaker
+        with only the talk's content to take care of. We believe that the content is what truly matters, which is why
+        many of our members are also speakers and frequently give their own talks.
+      </p>
+    </div>
+  </div>
+</div>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #343a40">
+  <polygon points="100 0 100 100 0 100" style="fill: #ce7227" />
+</svg>
+
+<div class="border-light" style="background-color: #ce7227">
+  <div class="container subcontainer">
+    <img src="{% static 'img/team.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
+    <div class="lorem-left">
+      <h3 class="subtitle">Have a blast</h3>
+      <div class="mainnav"></div>
+      <p class="subtext">
+        With a decade of experience, GConfs has worked with the biggest names and shared events with <i>Facebook</i>,
+        <i>Google</i> and <i>EuroBSDcon</i> to name a few. If you think you have something worth sharing, just get in
+        touch with us at contact@gconfs.fr
+      </p>
+    </div>
+  </div>
+</div>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #ce7227">
+  <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
+</svg>
+
+<div class="border-dark" style="background-color: #343a40">
+  <div class="container subcontainer">
+    <div class="container">
+      <div class="copynope">
+        <a href="https://www.facebook.com/GConfs/" target="_blank"><span class="fab fa-facebook-square fa-2x"></span></a>
+        <a href="https://www.youtube.com/user/GConfs" target="_blank"><span class="fab fa-youtube fa-2x"></span></a>
+        <a href="https://www.linkedin.com/company/gconfs/" target="_blank"><span class="fab fa-linkedin-in fa-2x"></span></a>
+        <a href="https://github.com/gconfs" target="_blank"><span class="fab fa-github fa-2x"></span></a>
+        <a href="https://twitter.com/AssoGConfs" target="_blank"><span class="fab fa-twitter fa-2x"></span></a>
       </div>
     </div>
   </div>
+</div>
 
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #ce7227">
-    <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
-  </svg>
-
-  <div class="border-dark" style="background-color: #343a40">
-    <div class="container subcontainer">
-      <div class="container">
-        <div class="copynope">
-          <a href="https://www.facebook.com/GConfs/" target="_blank"><span class="fab fa-facebook-square fa-2x"></span></a>
-          <a href="https://www.youtube.com/user/GConfs" target="_blank"><span class="fab fa-youtube fa-2x"></span></a>
-          <a href="https://www.linkedin.com/company/gconfs/" target="_blank"><span class="fab fa-linkedin-in fa-2x"></span></a>
-          <a href="https://github.com/gconfs" target="_blank"><span class="fab fa-github fa-2x"></span></a>
-          <a href="https://twitter.com/AssoGConfs" target="_blank"><span class="fab fa-twitter fa-2x"></span></a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</body>
-
-</html>
+{% endblock %}
