--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -72,22 +72,21 @@
   </div>
 </div>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #ce7227">
-  <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
-</svg>
-
-<div class="border-dark" style="background-color: #343a40">
+<div class="last-header">
+  <svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none' >
+    <polygon points='100 100 100 0 0 0' style='fill:#ce7227' />
+  </svg>
   <div class="container subcontainer">
-    <div class="container">
-      <div class="copynope">
-        <a href="https://www.facebook.com/GConfs/" target="_blank"><span class="fab fa-facebook-square fa-2x"></span></a>
-        <a href="https://www.youtube.com/user/GConfs" target="_blank"><span class="fab fa-youtube fa-2x"></span></a>
-        <a href="https://www.linkedin.com/company/gconfs/" target="_blank"><span class="fab fa-linkedin-in fa-2x"></span></a>
-        <a href="https://github.com/gconfs" target="_blank"><span class="fab fa-github fa-2x"></span></a>
-        <a href="https://twitter.com/AssoGConfs" target="_blank"><span class="fab fa-twitter fa-2x"></span></a>
+      <div class="container">
+        <div class="copynope">
+          <a href="https://www.facebook.com/GConfs/" target="_blank"><span class="fab fa-facebook-square fa-2x"></span></a>
+          <a href="https://www.youtube.com/user/GConfs" target="_blank"><span class="fab fa-youtube fa-2x"></span></a>
+          <a href="https://www.linkedin.com/company/gconfs/" target="_blank"><span class="fab fa-linkedin-in fa-2x"></span></a>
+          <a href="https://github.com/gconfs" target="_blank"><span class="fab fa-github fa-2x"></span></a>
+          <a href="https://twitter.com/AssoGConfs" target="_blank"><span class="fab fa-twitter fa-2x"></span></a>
+        </div>
       </div>
     </div>
-  </div>
 </div>
 
 {% endblock %}
