--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -72,12 +72,11 @@
   </div>
 </div>
 
-<div class="last-header">
+<div class="footer">
   <svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none' >
-    <polygon points='100 100 100 0 0 0' style='fill:#ce7227' />
+    <polygon points='100 100 100 0 0 0' style="fill: #ce7227" />
   </svg>
   <div class="container subcontainer">
-      <div class="container">
         <div class="copynope">
           <a href="https://www.facebook.com/GConfs/" target="_blank"><span class="fab fa-facebook-square fa-2x"></span></a>
           <a href="https://www.youtube.com/user/GConfs" target="_blank"><span class="fab fa-youtube fa-2x"></span></a>
@@ -85,7 +84,6 @@
           <a href="https://github.com/gconfs" target="_blank"><span class="fab fa-github fa-2x"></span></a>
           <a href="https://twitter.com/AssoGConfs" target="_blank"><span class="fab fa-twitter fa-2x"></span></a>
         </div>
-      </div>
     </div>
 </div>
 
