--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -40,7 +40,7 @@
 
 <div class="border-dark" style="background-color: #343a40">
   <div class="container subcontainer">
-    <img src="{% static 'img/public.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="left">
+    <img src="{% static 'img/prepare.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="left">
     <div class="lorem-right">
       <h3 class="subtitle">Tech talks in a nutshell</h3>
       <div class="mainnav"></div>
