--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -55,6 +55,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="{% url 'dashboard:dashboard' %}">Dashboard</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                         </div>
