--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -14,12 +14,14 @@
       </div>
     </div>
   </div>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-    <polygon points="100 0 100 100 0 100" style="fill: #ce7227" />
-  </svg>
+  <div style="height:90px">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none">
+      <polygon points="100,0 100,100 0,100 0,90" style="fill: #ce7227;" />
+    </svg>
+  </div>
 </div>
 
-<div class="border-light" style="background-color: #ce7227">
+<div style="background-color: #ce7227">
   <div class="container" style="padding-top: 4em; padding-bottom: 4em;">
     <img src="{% static 'img/talk.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
     <div class="lorem-left">
@@ -32,13 +34,14 @@
       </p>
     </div>
   </div>
+  <div style="height:90px">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none">
+      <polygon points="0,0 100,90 100,100 0,100" style="fill: #343a40;" />
+    </svg>
+  </div>
 </div>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #ce7227">
-  <polygon points="0 0 100 100 0 100" style="fill: #343a40" />
-</svg>
-
-<div class="border-dark" style="background-color: #343a40">
+<div style="background-color: #343a40">
   <div class="container subcontainer">
     <img src="{% static 'img/nice.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="left">
     <div class="lorem-right">
@@ -51,13 +54,14 @@
       </p>
     </div>
   </div>
+  <div style="height:90px">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none">
+      <polygon points="100,0 100,100 0,100 0,90" style="fill: #ce7227;" />
+    </svg>
+  </div>
 </div>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="background-color: #343a40">
-  <polygon points="100 0 100 100 0 100" style="fill: #ce7227" />
-</svg>
-
-<div class="border-light" style="background-color: #ce7227">
+<div style="background-color: #ce7227">
   <div class="container subcontainer">
     <img src="{% static 'img/team.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
     <div class="lorem-left">
@@ -70,12 +74,14 @@
       </p>
     </div>
   </div>
+  <div style="height:10px">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none">
+      <polygon points="0,0 100,0 100,100 0,10" style="fill: #ce7227;" />
+    </svg>
+  </div>
 </div>
 
 <div class="footer">
-  <svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none' >
-    <polygon points='100 100 100 0 0 0' style="fill: #ce7227" />
-  </svg>
   <div class="container subcontainer">
         <div class="copynope">
           <a href="https://www.facebook.com/GConfs/" target="_blank"><span class="fab fa-facebook-square fa-2x"></span></a>
