misc: updating packages and fix typo

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/homepage.css' %}" />
 <link href="{% static 'css/admin.css' %}" rel="stylesheet">
 
-<script src="{% static 'js/admin.css' %}"></script>
+<script src="{% static 'js/admin.js' %}"></script>
 {% endblock %}
 
 {% block admin %}
