login: move from google to openid

--- a/dashboard/templates/generator.html
+++ b/dashboard/templates/generator.html
@@ -17,7 +17,7 @@
         <li class="breadcrumb-item">
             <a href="#">Dashboard</a>
         </li>
-        <li class="breadcrumb-item active">EventGen</li>
+        <li class="breadcrumb-item active">Generator</li>
     </ol>
 
     <div class="row">
