--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -51,7 +51,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            {{ user.username|title }}
+                            {{ user.first_name|title }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Profile</a>
@@ -62,7 +62,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'social:begin' 'google-oauth2' %}">Login</a>
+                        <a class="nav-link" href="{% url 'social:begin' 'epita' %}">Login</a>
                     </li>
                     {% endif %}
                 </ul>
