--- a/dashboard/templates/admin.html
+++ b/dashboard/templates/admin.html
@@ -37,9 +37,9 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'dashboard:eventgen' %}">
+      <a class="nav-link" href="{% url 'dashboard:generator' %}">
         <i class="fas fa-fw fa-calendar-alt"></i>
-        <span>EventGen</span></a>
+        <span>Generator</span></a>
     </li>
   </ul>
 
