--- a/dashboard/templates/generator.html
+++ b/dashboard/templates/generator.html
@@ -10,15 +10,7 @@
 {% endblock %}
 
 {% block admin %}
-<div class="container-fluid">
-
-    <!-- Breadcrumbs-->
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="#">Dashboard</a>
-        </li>
-        <li class="breadcrumb-item active">Generator</li>
-    </ol>
+<div class="container">
 
     <div class="row">
         <div class="col">
