misc: use container for all admin panel

--- a/dashboard/templates/admin.html
+++ b/dashboard/templates/admin.html
@@ -12,7 +12,7 @@
 <div id="wrapper">
 
   <!-- sidebar -->
-  <ul class="sidebar navbar-nav toggled">
+  <ul class="sidebar navbar-nav toggled" style="position: absolute;">
     <li class="nav-item active">
       <a class="nav-link" href="{% url 'dashboard:dashboard' %}">
         <i class="fas fa-fw fa-tachometer-alt"></i>
