--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block admin %}
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="col-xl-4 col-sm-6 mb-3">
             <div class="card text-white bg-primary o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon">
@@ -27,23 +27,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-warning o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fas fa-fw fa-list"></i>
-                    </div>
-                    <div class="mr-5">11 New Tasks!</div>
-                </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
-            </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="col-xl-4 col-sm-6 mb-3">
             <div class="card text-white bg-success o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon">
@@ -59,7 +43,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="col-xl-4 col-sm-6 mb-3">
             <div class="card text-white bg-danger o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon">
