--- a/dashboard/static/css/admin.css
+++ b/dashboard/static/css/admin.css
@@ -304,6 +304,10 @@ body.fixed-nav #content-wrapper {
   border-bottom: 0px;
 }
 
+.card-footer {
+  border-top: 0px;
+}
+
 .form-label-group {
   position: relative;
 }
