--- a/dashboard/templates/event_detail.html
+++ b/dashboard/templates/event_detail.html
@@ -12,5 +12,18 @@
 <div class="container">
     <h1 class="display-4">{{ event.title }}</h1>
     <br/>
+    <div class="card text-center">
+        <div class="card-header">
+            Featured
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="card-footer text-muted">
+            2 days ago
+        </div>
+    </div>
 </div>
 {% endblock %}
