--- a/homepage/templates/team.html
+++ b/homepage/templates/team.html
@@ -17,7 +17,7 @@
                     <div class="member-profile">
                         <h5><span>as</span> Treasurer</h5>
                         <img src="https://photos.cri.epita.fr/square/paul.khuat-duy" alt="" />
-                        <h4><span>Quentin</span>Barbarat</h4>
+                        <h4><span>Paul</span>Khuat-Duy</h4>
                     </div>	
                 </div>
                 <div class="col-md-2">
