--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -28,7 +28,7 @@
 <body style="margin-bottom: 0px;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'homepage:homepage' %}">
                 <img src="{% static 'img/gconfs_logo.png' %}" height="30" class="d-inline-block align-top" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
