fix: new year, new team

--- a/homepage/templates/team.html
+++ b/homepage/templates/team.html
@@ -16,8 +16,8 @@
                 <div class="col-md-2">
                     <div class="member-profile">
                         <h5><span>as</span> Treasurer</h5>
-                        <img src="https://photos.cri.epita.fr/square/paul.khuat-duy" alt="" />
-                        <h4><span>Paul</span>Khuat-Duy</h4>
+                        <img src="https://photos.cri.epita.fr/square/william.lin" alt="" />
+                        <h4><span>William</span>Lin</h4>
                     </div>	
                 </div>
                 <div class="col-md-2">
@@ -30,8 +30,8 @@
                 <div class="col-md-2">
                     <div class="member-profile">
                         <h5><span>as</span> Secretary</h5>
-                        <img src="https://photos.cri.epita.fr/square/maelle.roubeau" alt="" />
-                        <h4><span>Maëlle</span>Roubeau</h4>
+                        <img src="https://photos.cri.epita.fr/square/johan.pardo" alt="" />
+                        <h4><span>Johan</span>Pardo</h4>
                     </div>	
                 </div>
             </div>
