--- a/homepage/templates/team.html
+++ b/homepage/templates/team.html
@@ -18,21 +18,26 @@
                         <h5><span>as</span> Treasurer</h5>
                         <img src="https://photos.cri.epita.fr/square/william.lin" alt="" />
                         <h4><span>William</span>Lin</h4>
-                    </div>	
+                    </div>
                 </div>
                 <div class="col-md-2">
                     <div class="member-profile">
                         <h5><span>as</span> President</h5>
                         <img src="https://photos.cri.epita.fr/square/quentin.barbarat" alt="" />
                         <h4><span>Quentin</span>Barbarat</h4>
-                    </div>	
+                    </div>
                 </div>
                 <div class="col-md-2">
                     <div class="member-profile">
                         <h5><span>as</span> Secretary</h5>
                         <img src="https://photos.cri.epita.fr/square/johan.pardo" alt="" />
                         <h4><span>Johan</span>Pardo</h4>
-                    </div>	
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-12">
+                    <h4>and the over 20 volunteers who make GConfs possible each year!</h4>
                 </div>
             </div>
         </section>
