--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -90,6 +90,7 @@
           <a href="https://www.linkedin.com/company/gconfs/" target="_blank"><span class="fab fa-linkedin-in fa-2x"></span></a>
           <a href="https://github.com/gconfs" target="_blank"><span class="fab fa-github fa-2x"></span></a>
           <a href="https://twitter.com/AssoGConfs" target="_blank"><span class="fab fa-twitter fa-2x"></span></a>
+          <a href="https://www.meetup.com/GConfs/" target="_blank"><span class="fab fa-meetup fa-2x"></span></a>
         </div>
     </div>
 </div>
