Makes contact@ a mailto link

--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -71,7 +71,7 @@
       <p class="subtext">
         With a decade of experience, GConfs has worked with the biggest names and shared events with <i>Facebook</i>,
         <i>Google</i> and <i>EuroBSDcon</i> to name a few. If you think you have something worth sharing, just get in
-        touch with us at contact@gconfs.fr
+        touch with us at <a href="mailto:contact@gconfs.fr">contact@gconfs.fr</a>
       </p>
     </div>
   </div>
