--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -66,7 +66,7 @@
   <div class="container subcontainer">
     <img src="{% static 'img/team.jpg' %}" class="d-none d-lg-block rounded-circle" width="300" height="300" align="right">
     <div class="lorem-left">
-      <h3 class="subtitle">Have a blast</h3>
+      <h3 class="subtitle">{{ video_list.count }} talks, and counting</h3>
       <div class="mainnav"></div>
       <p class="subtext">
         With a decade of experience, GConfs has worked with the biggest names and shared events with <i>Facebook</i>,
