--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="{% url 'homepage:talk' %}">Talks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://wiki.gconfs.fr">Wiki</a>
+                        <a class="nav-link" href="https://wiki.gconfs.fr/home">Wiki</a>
                     </li>
                     {% endwith %}
                 </ul>
